--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: 314315960@qq.com
 description: "Every failure is leading towards success."
 keyword: "Jaeger, Jaeger Blog, J的博客 iOS, Apple, iPhone"
-url: "http://jaeger.github.io"          # your host, for absolute URL
+url: "https://jaeger.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/JaeGerW2016/jaeger.github.io.git" # you code repository
 
