--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Every failure is leading towards success."
 keyword: "Jaeger, Jaeger Blog, J的博客 iOS, Apple, iPhone"
 url: "https://jaeger.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/JaeGerW2016/jaeger.github.io.git" # you code repository
+#github_repo: "https://github.com/JaeGerW2016/jaeger.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
