--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/post-bg-desk.jpg
 email: 314315960@qq.com
 description: "Every failure is leading towards success."
 keyword: "Jaeger, Jaeger Blog, J的博客 iOS, Apple, iPhone"
-url: "https://jaeger.github.io"          # your host, for absolute URL
+url: "https://jaegerw2016.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-#github_repo: "https://github.com/JaeGerW2016/jaeger.github.io.git" # you code repository
+github_repo: "https://github.com/JaeGerW2016/jaegerw2016.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
