--- a/_config.yml
+++ b/_config.yml
@@ -12,17 +12,17 @@ github_repo: "https://github.com/JaeGerW2016/jaegerw2016.github.io.git" # you co
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/about-J-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+#zhihu_username:     qiubaiying
+github_username:    JaeGerW2016
+#facebook_username:  baiying.qiu.7
+jianshu_username:   dfa1922f29e5
 #twitter_username:   qiubaiying
 
 
